--- a/examples/app.html
+++ b/examples/app.html
@@ -181,7 +181,7 @@
 
             }
             i++;
-            alert(checkboxes[0].tagName);
+            // alert(checkboxes[0].tagName);
             var valueone = (checkboxes[element].textContent.replace(/\s/g, "") + "  " + stardata2 + "  " + enddata2 + "\n")
 
             hotelName = hotelName + valueone
@@ -211,13 +211,7 @@
 
 
 
-<script>
-    // $(document).ready(function() {
-    //     $("button").click(function() {
-    //         alert("The paragraph was clicked.");
-    //     });
-    // });
-</script>
+
 
 
 
