--- a/examples/index.html
+++ b/examples/index.html
@@ -39,6 +39,7 @@
                 </div>
                 <div class="col-sm-4">
 
+                    <!-- <input type="file" name="file" id="file" disabled="true"> -->
                     <input type="file" name="file" id="file">
                 </div>
                 <div class="col-sm-4">
@@ -65,6 +66,8 @@
     <script>
         localStorage.removeItem("datas");
         localStorage.removeItem("aodiofilename");
+
+
         document.getElementById('file').onchange = function() {
 
 
@@ -111,7 +114,7 @@
                         var file = x.files[i];
                         if ('name' in file) {
                             txt += "name: " + file.name + "<br>";
-                            alert(file.name);
+
                             localStorage["aodiofilename"] = file.name;
                             break;
                         }
