--- a/examples/index.html
+++ b/examples/index.html
@@ -35,12 +35,34 @@
         <div class="container mt-5">
             <div class="row">
                 <div class="col-sm-4">
-                    <input type="file" id="myFile" multiple size="50" onchange="myFunction()">
+
+
+
+
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Tag File</label>
+                        <input type="file" id="myFile" multiple size="50" onchange="myFunction()">
+
+                    </div>
+
+
+
                 </div>
                 <div class="col-sm-4">
 
                     <!-- <input type="file" name="file" id="file" disabled="true"> -->
-                    <input type="file" name="file" id="file">
+
+
+
+
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Voice File</label>
+                        <input class="form-control" type="file" name="file" id="file">
+
+                    </div>
+
+
+
                 </div>
                 <div class="col-sm-4">
 
