--- a/examples/index.html
+++ b/examples/index.html
@@ -41,7 +41,7 @@
 
                     <div class="form-group">
                         <label for="exampleInputEmail1">Tag File</label>
-                        <input type="file" id="myFile" multiple size="50" onchange="myFunction()">
+                        <input class="form-control" type="file" id="myFile" multiple size="50" onchange="myFunction()">
 
                     </div>
 
